# euclid

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude-flow/agents/: store.json
.claude-flow/swarm/: swarm-state.json
.github/workflows/: ci.yml
benchmarks/suites/: current-release.yaml  full-vision.yaml
docs/: README.md  benchmarks-readiness.md  contracts-manifests.md  math.md  modeling-pipeline.md  runtime-cli.md  search-core.md  system.md  testing-truthfulness.md  workbench.md
docs/evidence/: p13-benchmark-universe.md  p14-performance-and-scaling.md  p15-workbench-evidence-studio.md  p16-documentation-replacement.md
docs/examples/: blocked-and-invalid-fixtures.md  extension-lane-publication-fixtures.md  fixture-walkthroughs.md  negative-publication-fixtures.md  probabilistic-publication-fixtures.md  publication-foundations.md
docs/implementation/: authority-snapshot.yaml  certification-command-contract.yaml  certification-evidence-contract.yaml  certification-fixture-spec.yaml  euclid-closure-map.yaml  subtask-test-traceability.yaml
docs/plans/: 2026-04-21-euclid-enhancement-master-plan.md  2026-04-23-test-driven-forecasting-core-implementation-plan.md  2026-04-26-euclid-agentic-mathematical-efficacy-spec.md  2026-05-22-full-vision-certification-repair-design.md  2026-05-22-full-vision-certification-repair-implementation-plan.md  2026-05-26-equation-lanes-design-and-implementation-plan.md
docs/progress/: 2026-05-22-full-vision-completion-ledger.md  2026-05-25-full-vision-wave-0.md  2026-05-25-full-vision-wave-1.md  2026-05-25-full-vision-wave-2.md  2026-05-25-full-vision-wave-3.md  2026-05-25-full-vision-wave-4.md  2026-05-26-euclid-math-ux-improvement-swarm.md
docs/reference/: README.md  benchmarks-readiness.md  contracts-manifests.md  live-api-test-policy.md  modeling-pipeline.md  runtime-cli.md  search-core.md  system.md  testing-truthfulness.md  workbench.md
examples/: full_vision_run.yaml  minimal_dataset.csv  minimal_run.yaml
fixtures/canonical/: fixture-coverage.yaml
fixtures/runtime/: prototype-demo.yaml
output/jupyter-notebook/: current_release.ipynb  prototype-demo.ipynb
schemas/contracts/: abstention-types.yaml  algorithmic-dsl.yaml  candidate-state-machine.yaml  claim-lanes.yaml  conditional-shared-local-codelength.yaml  domain-specific-mechanism-mapping.yaml  enum-registry.yaml  evaluation-governance.yaml  event-definition.yaml  evidence-independence-protocol.yaml  external-evidence-manifest.yaml  falsification-dossier.yaml  fixture-provenance.yaml  implementation-sequence.yaml  invariance-test.yaml  live-api-evidence.yaml  mechanistic-evidence.yaml  module-registry.yaml  numerical-policy.yaml  numerical-runtime.yaml  paired-predictive-test-result.yaml  publication-lifecycle.yaml  pysindy-engine-trace.yaml  pysr-engine-trace.yaml  reference-types.yaml  robustness.yaml  run-lifecycle.yaml  schema-registry.yaml  shared-plus-local-evaluation.yaml  stochastic-law.yaml  unseen-entity-prediction-policy.yaml
schemas/core/: abstention-types.yaml  euclid-system.yaml  evidence-classes.yaml  forecast-object-types.yaml  math-source-map.yaml  reducer-families.yaml  scope-axes.yaml
schemas/readiness/: completion-regression-policy.yaml  current-release-v1.yaml  euclid-readiness.yaml  evidence-strength-policy.yaml  full-vision-v1.yaml  shipped-releasable-v1.yaml
scripts/: audit_euclid_enhancement.py  benchmark_smoke.sh  benchmark_suite.sh  demo.sh  fmp_euclid_smoke.py  install.sh  install_smoke.sh  lint.sh  live_api_smoke.sh  package.sh  perf_smoke.sh  release_smoke.sh  render_holistic_equation.py  test.sh  workbench_ui_smoke.py
src/euclid/: __init__.py  __main__.py  _cli_compat.py  _version.py  bootstrap.py  (+15 more)
tests/: conftest.py
tools/: __init__.py
(+873 files in other folders)
