[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euclid"
version = "1.0.0"
description = "Euclid current_release runtime and full_vision certification tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.5,<3",
  "pandas>=2.2.2,<3",
  "scipy>=1.15.0,<2",
  "sympy>=1.13.0,<2",
  "pint>=0.24.0,<1",
  "statsmodels>=0.14.0,<1",
  "scikit-learn>=1.6.0,<2",
  "pysindy>=1.7.5,<3",
  "pysr>=1.5.0,<2",
  "egglog>=11.0.0,<12",
  "joblib>=1.4.0,<2",
  "Pillow>=11.3.0,<12",
  "pydantic>=2.12.5,<3",
  "pyarrow>=20.0.0,<21",
  "typer>=0.15.2,<1",
  "nbformat>=5.10.4,<6",
  "nbclient>=0.10.2,<1",
  "sqlalchemy>=2.0.38,<2.1",
  "pyinstrument>=5.0.0,<6",
  "PyYAML>=6.0.2,<7",
  "python-dotenv>=1.0.1,<2",
  "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "wheel>=0.46.0,<1",
  "pytest==8.2.0",
  "pytest-cov==6.2.1",
  "pytest-timeout>=2.3.1,<3",
  "pytest-xdist>=3.6.1,<4",
  "hypothesis>=6.120.0,<7",
  "responses>=0.25.3,<1",
  "respx>=0.22.0,<1",
  "vcrpy>=6.0.2,<7",
  "ruff==0.6.8",
]
distributed = [
  "ray>=2.30.0,<3",
]

[project.scripts]
euclid = "euclid.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
euclid = [
  "_assets/**/*.yaml",
  "_assets/**/*.csv",
  "_assets/**/*.ipynb",
  "_assets/**/*.json",
  "_assets/**/*.html",
  "_assets/**/*.css",
  "_assets/**/*.js",
  "_assets/**/*.mjs",
  "_assets/**/*.woff",
  "_assets/**/*.woff2",
  "_assets/**/*.ttf",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --ignore=tests/spec_compiler"
minversion = "8.0"
timeout = 120
testpaths = [
  "tests",
]
markers = [
  "unit: deterministic unit tests",
  "integration: deterministic integration tests",
  "regression: regression and golden artifact tests",
  "benchmark: benchmark semantics tests",
  "perf: performance tests",
  "live_api: tests that call live external APIs when EUCLID_LIVE_API_TESTS is enabled",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I"]
